--- a/.luarc.json
+++ b/.luarc.json
@@ -3,5 +3,8 @@
     "Lua.diagnostics.disable": [
         "missing-parameter",
         "redefined-local"
+    ],
+    "Lua.diagnostics.globals": [
+        "dbg"
     ]
 }
