--- a/.luarc.json
+++ b/.luarc.json
@@ -1,10 +1,6 @@
 {
   "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-  "Lua.diagnostics.disable": [
-    "missing-parameter",
-    "redefined-local"
-  ],
-  "Lua.diagnostics.globals": [
-    "dbg"
-  ]
+  "Lua.diagnostics.disable": ["missing-parameter", "redefined-local"],
+  "Lua.diagnostics.globals": ["dbg"],
+  "Lua.workspace.checkThirdParty": false
 }
