--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,11 @@
 {
-  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-  "Lua.diagnostics.disable": ["missing-parameter", "redefined-local"],
-  "Lua.diagnostics.globals": ["dbg"],
-  "Lua.workspace.checkThirdParty": false
+    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+    "Lua.diagnostics.disable": [
+        "missing-parameter",
+        "redefined-local"
+    ],
+    "Lua.diagnostics.globals": [
+        "dbg"
+    ],
+    "Lua.workspace.checkThirdParty": false
 }
