--- a/.luarc.json
+++ b/.luarc.json
@@ -7,5 +7,6 @@
     "Lua.diagnostics.globals": [
         "dbg"
     ],
-    "Lua.workspace.checkThirdParty": false
+    "Lua.workspace.checkThirdParty": false,
+    "workspace.checkThirdParty": false
 }
