--- a/.luarc.json
+++ b/.luarc.json
@@ -1,13 +1,8 @@
 {
-    "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-    "Lua.diagnostics.disable": [
-        "missing-parameter",
-        "redefined-local"
-    ],
-    "Lua.diagnostics.globals": [
-        "dbg",
-        "bt"
-    ],
-    "Lua.workspace.checkThirdParty": false,
-    "workspace.checkThirdParty": false
+  "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
+  "Lua.diagnostics.disable": ["missing-parameter", "redefined-local"],
+  "Lua.diagnostics.globals": ["dbg", "bt"],
+  "Lua.workspace.checkThirdParty": false,
+  "workspace.checkThirdParty": false
 }
+
